# transformer

./: .gitignore  README.md  README_hub.md  pyproject.toml
config/: gpt2_small_test.json  llama_124M.json
scripts/: download_data.py  gpt2_124m.json  gpt2_small_test.json  hub.py  inference.py  llama_124M.json  train_llm.py
src/transformer/: __init__.py  config.py
src/transformer/data/: __init__.py  dataset.py  tokenizer.py
src/transformer/generation/: __init__.py  generate.py
src/transformer/layers/: __init__.py  attention.py  block.py  embedding.py  feedforward.py  norm.py
src/transformer/models/: __init__.py  decoder.py  encoder.py  encoder_decoder.py  lm.py  masked_lm.py
src/transformer/training/: __init__.py  metrics.py  trainer.py  utils.py
tests/: conftest.py  test_attention.py  test_block.py  test_embedding.py  test_feedforward.py  test_models.py  test_norm.py  test_overfit.py
